fixed the typos from before

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <hmtl>
 <head>
-  <title>ProTfolio</titel>
-    <link rel="stylesheet" href="stylo.css" />
+  <title>ProTfolio</title>
+    <link rel="stylesheet" href="stylo.css"></link>
 </head>
 <body>
   <section id="face">
