init for CSS and put pic into html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <section id="face">
+    <img src="profpic.jpg" alt="My picure of my face"/>
     <h1>It's about to go down!</h1>
     <p>This is supposed to describe what is going down.</p>
   </section>
