--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 </head>
 <body>
   <section id="face">
+    <header>
     <img src="profpic.jpg" alt="My picure of my face"/>
     <h1>It's about to go down!</h1>
     <p>This is supposed to describe what is going down.</p>
+  </header>
   </section>
 </body>
 </html>
