Stopping Point, centered the thing

--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
     <link rel="stylesheet" href="stylo.css"></link>
 </head>
 <body>
+  <nav>
+    <ul>
+      <li><a href="#">About</a></li>
+        <li><a href="#">More</a></li>
+          <li><a href="#">More About</a></li>
+            <li><a href="#">Skillz</a></li>
+    </ul>
+  </nav>
   <section id="face">
+  
     <header>
     <img src="profpic.jpg" alt="My picure of my face"/>
     <h1>It's about to go down!</h1>
