added the spidey pic, did some purty

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     </ul>
   </nav>
   <section id="face">
-  
+
     <header>
     <img src="profpic.jpg" alt="My picure of my face"/>
-    <h1>It's about to go down!</h1>
-    <p>This is supposed to describe what is going down.</p>
+    <h1>Christopher T. Gardner</h1>
+    <p>Developing Full-Stack Developer</p>
   </header>
   </section>
 </body>
