fixed that typo and adjusted accordinly

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<hmtl>
+<html>
 <head>
   <title>ProTfolio</title>
-    <link rel="stylesheet" href="stylo.css"></link>
+    <link rel="stylesheet" href="stylo.css"/>
     <script src="jquery-1.12.4.min.js"></script>
     <script src="script.js"></script>
 </head>
@@ -10,8 +10,8 @@
   <nav>
     <ul>
       <li><a href="#">About</a></li>
-        <li><a href="#">5 yrs -></a></li>
-          <li><a href="#"><- 5yrs</a></li>
+        <li><a href="#">Past</a></li>
+          <li><a href="#"> 5yrs</a></li>
             <li><a href="#">Skillz</a></li>
     </ul>
   </nav>
