--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
 
     <header>
     <img src="profpic.jpg" alt="My picure of my face"/>
-    <h1>Christopher T. Gardner</h1>
+    <h1 >Christopher T. Gardner</h1>
     <p>Developing Full-Stack Developer</p>
   </header>
 
   </section>
   <div id="bholder">
   <div id="bio">
+    <p>Anakin Skywalker was a Force-sensitive human male who served the Galactic Republic as a Jedi Knight, and later the Galactic Empire as the Sith Lord Darth Vader. Believed to have been conceived by the Force, he was born to Shmi Skywalker into a life of slavery on the Outer Rim world of Tatooine. At a young age, Skywalker was discovered by the Jedi Order, who freed Anakin from slavery and brought the boy into their community; hailing Skywalker as the Chosen One of Jedi prophecy, destined to defeat the Sith and bring balance to the Force.</p>
   </div>
 </div>
 
