add code comments

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <nav>
     <ul>
+      <!-- AM: Indenting tip - it's more readable if your <li>'s are aligned vertically. -->
       <li><a href="#">About</a></li>
         <li><a href="#">Past</a></li>
           <li><a href="#"> 5yrs</a></li>
