changed 'content' to 'div'

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   </section>
   <section id="bholder">
-  <content id="bio">
+  <div id="bio">
     <p>Anakin Skywalker was a Force-sensitive human male who served the Galactic
       Republic as a Jedi Knight, and later the Galactic Empire as the
       Sith Lord Darth Vader. Believed to have been conceived by the Force,
@@ -34,7 +34,7 @@
       who freed Anakin from slavery and brought the boy into their community;
       hailing Skywalker as the Chosen One of Jedi prophecy, destined to defeat
       the Sith and bring balance to the Force.</p>
-  </content>
+  </div>
 </section>
 
 </body>
