--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <nav>
     <ul>
-      <li><a href="#">About</a></li>
+      <li><a href="#bio">About</a></li>
       <li><a href="#">Past</a></li>
       <li><a href="#"> 5yrs</a></li>
       <li><a href="#">Skillz</a></li>
