New stylesheet branch tester

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>ProTfolio</title>
-    <link rel="stylesheet" href="stylo.css"/>
-    <script src="jquery-1.12.4.min.js"></script>
+    <!--<link rel="stylesheet" href="stylo.css"/>-->
+  <script src="jquery-1.12.4.min.js"></script>
     <script src="script.js"></script>
 </head>
 <body>
@@ -15,15 +15,15 @@
       <li><a href="#">Skillz</a></li>
     </ul>
   </nav>
-  <section id="face">
 
+  <section id="face">
     <header>
       <img src="profpic.jpg" alt="My picure of my face"/>
       <h1 >Christopher T. Gardner</h1>
       <p>Developing Full-Stack Developer</p>
     </header>
-
   </section>
+
   <section id="bholder">
   <div id="bio">
     <p>Anakin Skywalker was a Force-sensitive human male who served the Galactic
