seeing if this is responsive at all -_-

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>ProTfolio</title>
+  <meta name="viewport" content="width=device-width, intial-scale=1">
   <!-- <script src="jquery-1.12.4.min.js"></script> -->
     <!--<link rel="stylesheet" href="stylo.css"/>-->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
@@ -25,7 +26,7 @@
     </ul>
   </nav>
 
-  <section class="container-fluid jumbotron " id="face">
+  <section class="container-fluid jumbotron" id="face">
     <header>
       <img src="profpic.jpg" alt="My picure of my face"/>
       <h1 >Christopher T. Gardner</h1>
