redo testing navbar -____-

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!--<link rel="stylesheet" href="stylo.css"/>-->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <!-- <link rel="stylesheet" href="stiles.css"/> -->
-    <link rel="stylesheet" href="styloRen.css"/>
+    <!-- <link rel="stylesheet" href="styloRen.css"/> -->
 
   <script src="bower_components/jquery/dist/jquery.js"></script>
   <script src="bower_components/angular/angular.js"></script>
@@ -17,8 +17,8 @@
   <script src="script.js"></script>
 </head>
 <body class="container col-xs-12">
-  <nav class="navbar-fixed-top navbar-dark bg-info container-fluid">
-    <ul class="nav navbar-nav container-fluid">
+  <nav class="navbar navbar-dark bg-info container-fluid">
+    <ul class="nav navbar-nav">
       <li class="pull-left"><a href="#bio">About</a></li>
       <li class="pull-left"><a href="#">Past</a></li>
       <li class="pull-right"><a href="#"> 5yrs</a></li>
@@ -28,7 +28,7 @@
 
   <section class="container-fluid jumbotron" id="face">
     <header>
-      <img src="profpic.jpg" alt="My picure of my face"/>
+      <!-- <img src="profpic.jpg" alt="My picure of my face"/> -->
       <h1 >Christopher T. Gardner</h1>
       <p>Developing Full-Stack Developer</p>
     </header>
