redo testing navbar -____-

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>ProTfolio</title>
-  <meta name="viewport" content="width=device-width, intial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <script src="jquery-1.12.4.min.js"></script> -->
     <!--<link rel="stylesheet" href="stylo.css"/>-->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
