redo testing navbar -____-

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script src="bower_components/angular-resource/angular-resource.js"></script>
   <script src="script.js"></script>
 </head>
-<body class="container col-xs-12">
+<body class="container ">
   <nav class="navbar navbar-dark bg-info container-fluid">
     <ul class="nav navbar-nav">
       <li class="pull-left"><a href="#bio">About</a></li>
@@ -35,11 +35,11 @@
   </section>
 
 <div class="container-fluid ">
-  <div class="col-sm-5 well" id="flexbox-background">
+  <div class="well" id="flexbox-background">
     <p>The <code>Flexbox Layout</code> (Flexible Box) module (currently a W3C Last Call Working Draft) aims at providing a more efficient way to lay out, align and distribute space among items in a container, even when their size is unknown and/or dynamic (thus the word "flex").</p>
     <p><strong>Note:</strong> Flexbox layout is most appropriate to the components of an application, and small-scale layouts, while the <a href="http://css-tricks.com/snippets/css/complete-guide-grid/">Grid</a> layout is intended for larger scale layouts.
   </div>
-  <section class="col-sm-7 " id="bholder">
+  <section class="" id="bholder">
     <div id="bio">
       <p>Anakin Skywalker was a Force-sensitive human male who served the Galactic
         Republic as a Jedi Knight, and later the Galactic Empire as the
@@ -51,7 +51,7 @@
         the Sith and bring balance to the Force.</p>
     </div>
   </section>
-  <div class="col-xs-12 well">
+  <div class=" well">
     <p>The main idea behind the flex layout is to give the container the ability to alter its items' width/height (and order) to best fill the available space (mostly to accommodate to all kind of display devices and screen sizes). A flex container expands items to fill available free space, or shrinks them to prevent overflow.</p>
     <p>Most importantly, the flexbox layout is direction-agnostic as opposed to the regular layouts (block which is vertically-based and inline which is horizontally-based). While those work well for pages, they lack flexibility (no pun intended) to support large or complex applications (especially when it comes to orientation changing, resizing, stretching, shrinking, etc.). </p>
   </div>
