redo testing navbar -____-

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <script src="script.js"></script>
 </head>
 <body class="container ">
-  <nav class="navbar navbar-dark bg-info container-fluid">
+  <nav class="navbar navbar-inverse">
     <ul class="nav navbar-nav">
       <li class="pull-left"><a href="#bio">About</a></li>
       <li class="pull-left"><a href="#">Past</a></li>
