--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!--<link rel="stylesheet" href="stylo.css"/>-->
     <link rel="stylesheet" href="compnts/bootstrap/dist/css/bootstrap.css">
     <!-- <link rel="stylesheet" href="stiles.css"/> -->
-    <!-- <link rel="stylesheet" href="styloRen.css"/> -->
+    <link rel="stylesheet" href="styloRen.css"/>
 
   <script src="compnts/jquery/dist/jquery.js"></script>
   <script src="compnts/angular/angular.js"></script>
@@ -16,8 +16,8 @@
   <script src="compnts/angular-resource/angular-resource.js"></script>
   <script src="script.js"></script>
 </head>
-<body class="container ">
-  <nav class="navbar navbar-inverse">
+<body class="container">
+  <nav class="navbar-fixed-top navbar-inverse">
     <ul class="nav navbar-nav">
       <li class="pull-left"><a href="#bio">About</a></li>
       <li class="pull-left"><a href="#">Past</a></li>
@@ -29,7 +29,7 @@
   <section class="container-fluid jumbotron" id="face">
     <header>
       <!-- <img src="profpic.jpg" alt="My picure of my face"/> -->
-      <h1 >Christopher T. Gardner</h1>
+      <h1 >C. T. Gardner</h1>
       <p>Developing Full-Stack Developer</p>
     </header>
   </section>
