this is a commit

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body class="container">
   <nav class="navbar-fixed-top navbar-inverse">
     <ul class="nav navbar-nav">
-      <li class="pull-left"><a href="#bio">About</a></li>
+      <li class="pull-left" id="about"><a href="#bio">About</a></li>
       <li class="pull-left"><a href="#">Past</a></li>
       <li class="pull-right"><a href="#"> 5yrs</a></li>
       <li class="pull-right"><a href="http://gardner589.github.io/ProjectOne" target="_blank">Skillz</a></li>
@@ -29,12 +29,14 @@
   <section class="container-fluid jumbotron" id="face">
     <header>
       <!-- <img src="profpic.jpg" alt="My picure of my face"/> -->
-      <h1 >C. T. Gardner</h1>
+      <h1 >Christopher Gardner</h1>
       <p>Developing Full-Stack Developer</p>
     </header>
   </section>
 
-<div class="container-fluid ">
+
+
+<div class="container-fluid" id="content">
   <div class="well" id="flexbox-background">
     <p>The <code>Flexbox Layout</code> (Flexible Box) module (currently a W3C Last Call Working Draft) aims at providing a more efficient way to lay out, align and distribute space among items in a container, even when their size is unknown and/or dynamic (thus the word "flex").</p>
     <p><strong>Note:</strong> Flexbox layout is most appropriate to the components of an application, and small-scale layouts, while the <a href="http://css-tricks.com/snippets/css/complete-guide-grid/">Grid</a> layout is intended for larger scale layouts.
