Update index.html nav instead of pull. Just to see

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 <body class="container">
   <nav class="navbar-fixed-top navbar-inverse">
     <ul class="nav navbar-nav">
-      <li class="pull-left" id="about"><a href="#bio">About</a></li>
-      <li class="pull-left"><a href="#">Past</a></li>
-      <li class="pull-right"><a href="#"> 5yrs</a></li>
-      <li class="pull-right"><a href="http://gardner589.github.io/ProjectOne" target="_blank">Skillz</a></li>
+      <li class="nav" id="about"><a href="#bio">About</a></li>
+      <li class="nav"><a href="#">Past</a></li>
+      <li class="nav"><a href="#"> 5yrs</a></li>
+      <li class="nav"><a href="http://gardner589.github.io/ProjectOne" target="_blank">Skillz</a></li>
     </ul>
   </nav>
 
