started new stuff

--- a/index.html
+++ b/index.html
@@ -4,23 +4,24 @@
   <title>ProTfolio</title>
   <script src="jquery-1.12.4.min.js"></script>
     <script src="script.js"></script>
+    <link rel="stylesheet" href="master.css">
 </head>
 <body>
-  <nav>
-    <ul>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Past</a></li>
-      <li><a href="#"> 5yrs</a></li>
-      <li><a href="http://gardner589.github.io/ProjectOne" target="_blank">Skillz</a></li>
-    </ul>
-  </nav>
-
   <section id="face">
-    <header>
-      <img src="profpic.jpg" alt="My picure of my face"/>
+      <img src="myFACE.jpg" alt="My picure of my face"/>
       <h1 >Christopher T. Gardner</h1>
-      <p>Full-Stack Developer</p>
-    </header>
+      <h3>Full-Stack Developer</h3>
   </section>
+  <div class="navg8">
+    <div class="about">
+      <h3>About Me</h3>
+    </div>
+    <div class="projects">
+      <h3>Projects</h3>
+    </div>
+    <div class="skills">
+      <h3>Skills</h3>
+    </div>
+</div>
 </body>
 </html>
