--- a/index.html
+++ b/index.html
@@ -35,15 +35,19 @@
           </a>
         </div>
       <div class="projects">
-        <h3>Projects</h3>
+        <a href="#projects">
+          <h3>Projects</h3>
+        </a>
       </div>
       <div class="skills">
-        <h3>Skills</h3>
+        <a href="#skills">
+          <h3>Skills</h3>
+        </a>
       </div>
   </div>
   <div class="showing">
     <div id='skills'>
-
+      <h3>Skills</h3>
     </div>
     <div id="about-show">
       <p>
