--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
   <div class="showing">
     <div id='skills'>
       <h3>Skills</h3>
+      <p>
+        
+      </p>
     </div>
     <div id="about-show">
       <p>
@@ -60,18 +63,27 @@
         <a target="_blank" href="http://gardner589.github.io/ProjectOne/">
           <h2>Marvel v. Capcom Memory</h2>
           <img src="memory.png" alt="MvC-memory" />
+          <p>
+            Memory game with a classic video game theme.
+          </p>
         </a>
       </div>
       <div class="skillsBook">
         <a target="_blank" href="https://skillz-book.herokuapp.com/skills">
           <h2>SkillsBook</h2>
           <img src="skillsBook.png" alt="skillsbook" />
+          <p>
+            SkillsBook was my second project at General Assembly. I was required to make a Rails application with basic CRUD  funcitonality.
+          </p>
         </a>
       </div>
       <div class="congreddit">
         <a target="_blank" href="https://gardner589.github.io/congreddit_angular_rebuild/#/legislators">
           <h2>Congreddit</h2>
           <img src="congreddit.png" alt="congreddit" />
+          <p>
+             Congreddit is an app where users can see different legislators voting history
+          </p>
         </a>
       </div>
     </div>
