some style tweaks

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>ProTfolio</title>
-  <script src="jquery-1.12.4.min.js"></script>
+  <script   src="https://code.jquery.com/jquery-2.2.4.min.js" ></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
     <link rel="stylesheet" href="master.css">
 </head>
 <body>
+  <div class="bg1"></div>
   <section id="face">
       <img src="myFACE.jpg" alt="My picure of my face"/>
       <h1 >Christopher T. Gardner</h1>
@@ -28,66 +31,65 @@
           </a>
         </div>
       </div>
-  </section>
-  <div class="navg8">
+      <div class="navg8">
         <div class="about">
           <a href="#about-show">
             <h3>About Me</h3>
           </a>
         </div>
-      <div class="projects">
-        <a href="#projects">
-          <h3>Projects</h3>
-        </a>
+        <div class="projects">
+          <a href="#projects">
+            <h3>Projects</h3>
+          </a>
+        </div>
+        <div class="skills">
+          <a href="#skills">
+            <h3>Skills</h3>
+          </a>
+        </div>
       </div>
-      <div class="skills">
-        <a href="#skills">
-          <h3>Skills</h3>
-        </a>
-      </div>
-  </div>
+  </section>
   <div class="showing">
     <div id='skills'>
       <h3>Skills</h3>
       <p>
-        
+
       </p>
     </div>
     <div id="about-show">
-      <p>
-        I am a creative and patient problem solver with experience in diverse environments for over 10 years. I'm fascinated by how things work and I look forward to discovering how new languages, technologies, frameworks, and stacks work when employed to solve problems.
-      </p>
+      <p>A creative web developer fascinated by discovering how new languages, technologies, frameworks, and stacks work when utilized to solve problems.</p>
     </div>
     <div id="projects">
-      <div class="memory">
-        <a target="_blank" href="http://gardner589.github.io/ProjectOne/">
-          <h2>Marvel v. Capcom Memory</h2>
-          <img src="memory.png" alt="MvC-memory" />
-          <p>
-            Memory game with a classic video game theme.
-          </p>
-        </a>
-      </div>
-      <div class="skillsBook">
-        <a target="_blank" href="https://skillz-book.herokuapp.com/skills">
-          <h2>SkillsBook</h2>
-          <img src="skillsBook.png" alt="skillsbook" />
-          <p>
-            SkillsBook was my second project at General Assembly. I was required to make a Rails application with basic CRUD  funcitonality.
-          </p>
-        </a>
-      </div>
-      <div class="congreddit">
-        <a target="_blank" href="https://gardner589.github.io/congreddit_angular_rebuild/#/legislators">
-          <h2>Congreddit</h2>
-          <img src="congreddit.png" alt="congreddit" />
-          <p>
-             Congreddit is an app where users can see different legislators voting history
-          </p>
-        </a>
-      </div>
+          <div class="memory">
+            <a target="_blank" href="http://gardner589.github.io/ProjectOne/">
+              <h2>M v.C Memory</h2>
+              <img src="memory.png" alt="MvC-memory" />
+              <p>
+                A concentration game with a classic Marvel vs. Capcom theme.
+              </p>
+            </a>
+          </div>
+          <div  class="skillsBook">
+            <a target="_blank" href="https://skillz-book.herokuapp.com/skills">
+              <h2>SkillsBook</h2>
+              <img src="skillsBook.png" alt="skillsbook" />
+              <p>
+                A Rails application with basic CRUD actions, that lets users upload videos of their favorite skills.
+              </p>
+            </a>
+          </div>
+          <div class="congreddit">
+            <a target="_blank" href="https://gardner589.github.io/congreddit_angular_rebuild/#/legislators">
+              <h2>Congreddit</h2>
+              <img src="congreddit.png" alt="congreddit" />
+              <p>
+                Congreddit is an app where users can see different legislators voting history
+              </p>
+            </a>
+          </div>
     </div>
   </div>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
