--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       </p>
     </div>
     <div id="about-show">
+      <h3>IAmA</h3>
       <p>A creative web developer fascinated by discovering how new languages, technologies, frameworks, and stacks work when utilized to solve problems.</p>
     </div>
     <div id="projects">
