--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </a>
           </div>
           <div class="congreddit">
-            <a target="_blank" href="https://gardner589.github.io/congreddit_angular_rebuild/#/legislators">
+            <a target="_blank" href="https://gardner589.github.io/congreddit_angular_rebuild/#/">
               <h2>Congreddit</h2>
               <img src="congreddit.png" alt="congreddit" />
               <p>
