some more style tweaks

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="bg1"></div>
   <section id="face">
-      <img src="myFACE.jpg" alt="My picure of my face"/>
+      <img id="myFace" src="myFACE.jpg" alt="My picure of my face"/>
       <h1 >Christopher T. Gardner</h1>
       <h3>Full-Stack Developer</h3>
       <div class="contact">
