--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
             <img src="twitter.png" alt="twit" />
           </a>
         </div>
+        <div class="twitch">
+          <a href="https://www.twitch.tv/lord_shirc">
+            <img src="twitch.png" alt="twitch" />
+          </a>
+        </div>
       </div>
       <div class="navg8">
         <div class="about">
