--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>omg CTG</title>
+  <link rel="icon" href="myFACE.jpg">
   <script   src="https://code.jquery.com/jquery-2.2.4.min.js" ></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
@@ -91,6 +92,13 @@
               <p>
                 Congreddit is an app where users can see different legislators voting history
               </p>
+            </a>
+          </div>
+          <div class="clc">
+            <a target="_blank" href="http://chrislovescombos.herokuapp.com/">
+              <h2>Chris Loves Combos</h2>
+              <img src="combolove.png" alt="combolove" />
+              <p>This is a WordPress blog I made and deployed to Heroku, which was pretty challenging.</p>
             </a>
           </div>
     </div>
