--- a/index.html
+++ b/index.html
@@ -101,6 +101,15 @@
               <p>This is a WordPress blog I made and deployed to Heroku, which was pretty challenging.</p>
             </a>
           </div>
+          <div class="ghost">
+            <a target="_blank" href="http://gardner589.github.io/ghost/">
+              <h2>M v.C Memory</h2>
+              <img src="ghost.png" alt="ghost" />
+              <p>
+                A concentration game with a classic Marvel vs. Capcom theme.
+              </p>
+            </a>
+          </div>
     </div>
   </div>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.js"></script>
