--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </a>
           </div>
           <div class="ghost">
-            <a target="_blank" href="http://gardner589.github.io/ghost/">
+            <a target="_blank" href="http://gardner589.github.io/Ghost">
               <h2>M v.C Memory</h2>
               <img src="ghost.png" alt="ghost" />
               <p>
