--- a/index.html
+++ b/index.html
@@ -103,11 +103,10 @@
           </div>
           <div class="ghost">
             <a target="_blank" href="http://gardner589.github.io/Ghost">
-              <h2>M v.C Memory</h2>
+              <h2>Ghost</h2>
               <img src="ghost.png" alt="ghost" />
               <p>
-                A concentration game with a classic Marvel vs. Capcom theme.
-              </p>
+A word game I used to play with my Mom. Play against the computer. Spell a word, one letter at a time, alternating turns. Words have to be 5 or more letters. Player with last letter loses              </p>
             </a>
           </div>
     </div>
