--- a/index.html
+++ b/index.html
@@ -106,6 +106,15 @@
 A word game I used to play with my Mom. Play against the computer. Spell a word, one letter at a time, alternating turns. Words have to be 5 or more letters. Player with last letter loses              </p>
             </a>
           </div>
+          <div class="jamz">
+            <a target="_blank" href="https://ctg-jamz.firebaseapp.com/">
+              <h2>CTG Jamz</h2>
+              <img src="jamz.png" alt="jamz" />
+              <p>
+                This a FireBase app built with AngularJS. Upload songs or just listen to the songs that are there.
+              </p>
+            </a>
+          </div>
     </div>
   </div>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.js"></script>
