--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       </p>
     </div>
 
+    <h1>Projects</h1>
     <div id="projects">
           <div class="memory">
             <a target="_blank" href="http://gardner589.github.io/ProjectOne/">
@@ -117,6 +118,13 @@ A word game I used to play with my Mom. Play against the computer. Spell a word,
           </div>
     </div>
   </div>
+  <h1>About Me</h1>
+  <div id="about-show">
+    <p>
+        I am a creative and patient problem solver with a track record of success in diverse environments for over 10 years. I'm fascinated by how things work and I look forward to discovering how new languages, technologies, frameworks, and stacks work when utilized to solve problems.
+      </p>
+  </div>
+
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.js"></script>
 <script src="script.js"></script>
 </body>
