some style tweaks

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </p>
     </div>
 
-    <h1>Projects</h1>
+    <h1 class="late-fix">Projects</h1>
     <div id="projects">
           <div class="memory">
             <a target="_blank" href="http://gardner589.github.io/ProjectOne/">
@@ -118,7 +118,7 @@ A word game I used to play with my Mom. Play against the computer. Spell a word,
           </div>
     </div>
   </div>
-  <h1>About Me</h1>
+  <h1 class="late-fix">About Me</h1>
   <div id="about-show">
     <p>
         I am a creative and patient problem solver with a track record of success in diverse environments for over 10 years. I'm fascinated by how things work and I look forward to discovering how new languages, technologies, frameworks, and stacks work when utilized to solve problems.
