changed the layout a little

--- a/index.html
+++ b/index.html
@@ -2,130 +2,63 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>omg CTG</title>
-  <link rel="icon" href="myFACE.jpg">
+  <title>CTG</title>
+  <link rel="icon" href="./images/myFACE.jpg">
   <script   src="https://code.jquery.com/jquery-2.2.4.min.js" ></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
     <link rel="stylesheet" href="master.css">
 </head>
 <body>
   <div class="bg1"></div>
   <section id="face">
-      <img id="myFace" src="myFACE.jpg" alt="My picure of my face"/>
+      <img id="myFace" src="./images/myFACE.jpg" alt="My picure of my face"/>
       <h1 >Christopher T. Gardner</h1>
       <h3>Full-Stack Developer</h3>
       <div class="contact">
         <div class="git">
           <a target="_blank" href="https://github.com/gardner589">
-            <img src="github-logo.png" alt="github" />
+            <img src="./images/github-logo.png" alt="github" />
           </a>
         </div>
         <div class="linkd">
           <a target="_blank" href="https://www.linkedin.com/in/christophertgardner">
-            <img src="linkedin.png" alt="linkdin" />
+            <img src="./images/linkedin.png" alt="linkdin" />
           </a>
         </div>
         <div class="tweetr">
           <a target="_blank" href="https://twitter.com/lordshirc">
-            <img src="twitter.png" alt="twit" />
+            <img src="./images/twitter.png" alt="twit" />
           </a>
         </div>
         <div class="twitch">
           <a href="https://www.twitch.tv/lord_shirc">
-            <img src="twitch.png" alt="twitch" />
+            <img src="./images/twitch.png" alt="twitch" />
           </a>
         </div>
       </div>
       <div class="navg8">
         <div class="about">
-          <a href="#about-show">
+          <a href="about.html">
             <h3>About Me</h3>
           </a>
         </div>
         <div class="projects">
-          <a href="#projects">
+          <a href="projects.html">
             <h3>Projects</h3>
           </a>
         </div>
         <div class="skills">
-          <a href="#skills">
+          <a href="skills.html">
             <h3>Skills</h3>
+          </a>
+        </div>
+        <div class="resume">
+          <a href="resume.pdf" target="_blank">
+            <h3>Resume</h3>
           </a>
         </div>
       </div>
   </section>
-  <div class="showing">
-    <div id='skills'>
-      <h3>Skills</h3>
-      <p>
 
-      </p>
-    </div>
-
-    <h1 class="late-fix">Projects</h1>
-    <div id="projects">
-          <div class="memory">
-            <a target="_blank" href="http://gardner589.github.io/ProjectOne/">
-              <h2>M v.C Memory</h2>
-              <img src="memory.png" alt="MvC-memory" />
-              <p>
-                A concentration game with a classic Marvel vs. Capcom theme.
-              </p>
-            </a>
-          </div>
-          <div  class="skillsBook">
-            <a target="_blank" href="https://skillz-book.herokuapp.com/skills">
-              <h2>SkillsBook</h2>
-              <img src="skillsBook.png" alt="skillsbook" />
-              <p>
-                A Rails application with basic CRUD actions, that lets users upload videos of their favorite skills.
-              </p>
-            </a>
-          </div>
-          <div class="congreddit">
-            <a target="_blank" href="https://gardner589.github.io/congreddit_angular_rebuild/#/">
-              <h2>Congreddit</h2>
-              <img src="congreddit.png" alt="congreddit" />
-              <p>
-                Congreddit is an app where users can see different legislators voting history
-              </p>
-            </a>
-          </div>
-          <div class="clc">
-            <a target="_blank" href="http://chrislovescombos.herokuapp.com/">
-              <h2>Chris Loves Combos</h2>
-              <img src="combolove.png" alt="combolove" />
-              <p>This is a WordPress blog I made and deployed to Heroku, which was pretty challenging.</p>
-            </a>
-          </div>
-          <div class="ghost">
-            <a target="_blank" href="http://gardner589.github.io/Ghost">
-              <h2>Ghost</h2>
-              <img src="ghost.png" alt="ghost" />
-              <p>
-A word game I used to play with my Mom. Play against the computer. Spell a word, one letter at a time, alternating turns. Words have to be 5 or more letters. Player with last letter loses              </p>
-            </a>
-          </div>
-          <div class="jamz">
-            <a target="_blank" href="https://ctg-jamz.firebaseapp.com/">
-              <h2>CTG Jamz</h2>
-              <img src="jamz.png" alt="jamz" />
-              <p>
-                This a FireBase app built with AngularJS. Upload songs or just listen to the songs that are there.
-              </p>
-            </a>
-          </div>
-    </div>
-  </div>
-  <h1 class="late-fix">About Me</h1>
-  <div id="about-show">
-    <p>
-        I am a creative and patient problem solver with a track record of success in diverse environments for over 10 years. I'm fascinated by how things work and I look forward to discovering how new languages, technologies, frameworks, and stacks work when utilized to solve problems.
-      </p>
-  </div>
-
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
