--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <title>CTG About Me</title>
     <link rel="icon" href="myFACE.jpg">
     <script   src="https://code.jquery.com/jquery-2.2.4.min.js" ></script>
