--- a/skills.html
+++ b/skills.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <title>Skills</title>
     <link rel="icon" href="./images/myFACE.jpg">
     <script   src="https://code.jquery.com/jquery-2.2.4.min.js" ></script>
