changed the layout a little

--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
           <h2>CTG Jamz</h2>
           <img src="./images/jamz.png" alt="jamz" />
           <p>
-            This a FireBase app built with AngularJS. Upload songs or just listen to the songs that are there.
+            This is a FireBase app built with AngularJS. Upload songs or just listen to the songs that are there.
           </p>
         </a>
       </div>
@@ -63,7 +63,7 @@
               <h2>Congreddit</h2>
               <img src="./images/congreddit.png" alt="congreddit" />
               <p>
-                Congreddit is an app where users can see different legislators voting history
+                Congreddit is an app where users can see the voting history of different legislators.
               </p>
             </a>
           </div>
