--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <title>CTG</title>
   <link rel="icon" href="./images/myFACE.jpg">
   <script   src="https://code.jquery.com/jquery-2.2.4.min.js" ></script>
-    <link rel="stylesheet" href="master.css">
+    <link rel="stylesheet" href="stylo.css">
 </head>
 <body>
-  <div class="bg1"></div>
-  <section id="face">
-      <img id="myFace" src="./images/myFACE.jpg" alt="My picure of my face"/>
+  <!-- <div class="bg1"></div> -->
+  <div id="face">
+      <!-- <img id="myFace" src="./images/myFACE.jpg" alt="My picure of my face"/> -->
       <h1 >Christopher T. Gardner</h1>
       <h3>Full-Stack Developer</h3>
       <div class="contact">
@@ -35,7 +35,7 @@
           </a>
         </div>
       </div>
-      <div class="navg8">
+      <!-- <div class="navg8">
         <div class="about">
           <a href="about.html">
             <h3>About Me</h3>
@@ -56,8 +56,116 @@
             <h3>Resume</h3>
           </a>
         </div>
+      </div> -->
+  </div>
+  <div id="content">
+    <div class="nav">
+      <div class="about">
+        <a href="#content" >
+          <h3>About</h3>
+        </a>
       </div>
-  </section>
+      <div class="projects">
+        <a href="#content">
+          <h3>Projects</h3>
+        </a>
+      </div>
+      <div class="skills">
+        <a href="#content" >
+          <h3>Skills</h3>
+        </a>
+      </div>
+      <div class="resume">
+        <a href="resume.pdf" target="_blank">
+          <h3>Resume</h3>
+        </a>
+      </div>
+    </div>
+    <div id="about-show">
+      <img id="myFace" src="./images/myFACE.jpg" alt="My picure of my face"/>
+      <p>
+          I am a creative and patient problem solver with a track record of success in diverse environments for over 10 years. I'm fascinated by how things work and I look forward to discovering how new languages, technologies, frameworks, and stacks work when utilized to solve problems.
+        </p>
+    </div>
+
+    <div class="skillz">
+      <img src="./images/AJAX.png"/>
+      <img src="./images/AngularJS.png"/>
+      <img src="./images/bash-icon.png"/>
+      <img src="./images/bootstrap.png"/>
+      <img src="./images/CSS3.png"/>
+      <img src="./images/express.png"/>
+      <img src="./images/github.png"/>
+      <img src="./images/HTML5.png"/>
+      <img src="./images/Jasmine.svg"/>
+      <img src="./images/Jquery.png"/>
+      <img src="./images/JS.png"/>
+      <img src="./images/json-logo.png"/>
+      <img src="./images/MongoDB.png"/>
+      <img src="./images/Node.png"/>
+      <img src="./images/php.png"/>
+      <img src="./images/postgresql.png"/>
+      <img src="./images/Rails.png"/>
+      <img src="./images/React.png"/>
+      <img src="./images/rspec.png"/>
+      <img src="./images/selenium.png"/>
+      <img src="./images/wordpress.png"/>
+    </div>
+
+    <div id="projects">
+      <div class="clc">
+        <a target="_blank" href="http://chrislovescombos.herokuapp.com/">
+          <h4>Chris Loves Combos</h4>
+          <img src="./images/combolove.png" alt="combolove" />
+          <p>This is a WordPress blog I made and deployed to Heroku, which was very challenging.</p>
+        </a>
+      </div>
+      <div class="jamz">
+        <a target="_blank" href="https://ctg-jamz.firebaseapp.com/">
+          <h4>CTG Jamz</h4>
+          <img src="./images/jamz.png" alt="jamz" />
+          <p>
+            This is a FireBase app built with AngularJS. Upload songs or just listen to the songs that are there.
+          </p>
+        </a>
+      </div>
+          <div class="memory">
+            <a target="_blank" href="http://gardner589.github.io/ProjectOne/">
+              <h4>M v.C Memory</h4>
+              <img src="./images/memory.png" alt="MvC-memory" />
+              <p>
+                A concentration game with a classic Marvel vs. Capcom theme.
+              </p>
+            </a>
+          </div>
+          <div class="ghost">
+            <a target="_blank" href="http://gardner589.github.io/Ghost">
+              <h4>Ghost</h4>
+              <img src="./images/ghost.png" alt="ghost" />
+              <p>Play against the computer. Spell a word, one letter at a time, alternating turns. Words have to be 5 or more letters. Player with last letter loses.              </p>
+            </a>
+          </div>
+          <div  class="skillsBook">
+            <a target="_blank" href="https://skillz-book.herokuapp.com/skills">
+              <h4>SkillsBook</h4>
+              <img src="./images/skillsBook.png" alt="skillsbook" />
+              <p>
+                A Rails application with basic CRUD actions, that lets users upload videos of their favorite skills.
+              </p>
+            </a>
+          </div>
+          <div class="congreddit">
+            <a target="_blank" href="https://gardner589.github.io/congreddit_angular_rebuild/#/">
+              <h4>Congreddit</h4>
+              <img src="./images/congreddit.png" alt="congreddit" />
+              <p>
+                Congreddit is an app where users can see the voting history of different legislators.
+              </p>
+            </a>
+          </div>
+    </div>
+
+  </div>
 
 <script src="script.js"></script>
 </body>
