--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>CTG</title>
   <link rel="icon" href="./images/myFACE.jpg">
-  <script   src="https://code.jquery.com/jquery-2.2.4.min.js" ></script>
+  <script   src="jquery-2.2.4.min.js" ></script>
     <link rel="stylesheet" href="stylo.css">
 </head>
 <body>
-  <!-- <div class="bg1"></div> -->
   <div id="face">
-      <!-- <img id="myFace" src="./images/myFACE.jpg" alt="My picure of my face"/> -->
       <h1 >Christopher T. Gardner</h1>
       <h3>Full-Stack Developer</h3>
       <div class="contact">
