--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
   <title>CTG</title>
   <link rel="icon" href="./images/myFACE.jpg">
   <script   src="jquery-2.2.4.min.js" ></script>
